Rewrite task 12